--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body>
+    <a href="#" class="btn"></a>
+
     <div class="container"> 
         <div class="menu">
             <div class="conteudo-header">
