--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet/less" type="text/css" href="style/style.less" />
     <script src="//cdn.jsdelivr.net/npm/less@4.1.1" ></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
 </head>
+
 <body>
     <a href="#" class="btn"></a>
 
@@ -54,7 +55,17 @@
                     </a>
                 </h1>
             </div>
+
+            <a href="#" download>
+                <div class="download">  
+                    <img src="assets/img/icon-download.svg" alt="Ícone de download">  
+                    
+                    <a href="#"> Baixe meu currículo </a>
+                </div>
+            </a>
+
         </div>
+
 
     </div>
 
