--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a href="#" download>
                 <div class="download">  
                     <img src="assets/img/icon-download.svg" alt="Ícone de download">  
-                    
+
                     <a href="#"> Baixe meu currículo </a>
                 </div>
             </a>
@@ -135,13 +135,13 @@
                 <div class="projetos-all">
 
                     <div class="projetos">
-                        <div class="projeto-img"> <a href=""> <img src="./assets/img/dev-finance.png" alt="Imagem do site Dev Finance"> </a> </div>  
+                        <div class="projeto-img"> <a href="https://pauloabrahao.github.io/Dev.finance/" target="blank"> <img src="./assets/img/dev-finance.png" alt="Imagem do site Dev Finance"> </a> </div>  
                         
-                        <div class="projeto-img"> <a href=""> <img src="./assets/img/starbucks.png" alt="Imagem do site Starbucks"> </a> </div>  
+                        <div class="projeto-img"> <a href="https://pauloabrahao.github.io/Projeto-Star-Bucks/" target="blank"> <img src="./assets/img/starbucks.png" alt="Imagem do site Starbucks"> </a> </div>  
 
                         <div class="projeto-img"> <a href=""> <img src="./assets/img/moveit.png" alt="Imagem do site Move It"> </a> </div>  
 
-                        <div class="projeto-img" id="retira"> <a href=""> <img src="./assets/img/awax.png" alt="Imagem do site Awax" id="retira"> </a> </div>  
+                        <div class="projeto-img" id="retira"> <a href="https://pauloabrahao.github.io/Site-Awax/" target="blank"> <img src="./assets/img/awax.png" alt="Imagem do site Awax" id="retira"> </a> </div>  
 
                         <div class="projeto-img" id="retira"> <a href=""> <img src="./assets/img/hamburgueria.png" alt="Imagem de site de Hamburgueria" id="retira"> </a> </div>  
 
