--- a/index.html
+++ b/index.html
@@ -139,9 +139,10 @@
                         
                         <div class="projeto-img"> <a href="https://pauloabrahao.github.io/Projeto-Star-Bucks/" target="blank"> <img src="./assets/img/starbucks.png" alt="Imagem do site Starbucks"> </a> </div>  
 
-                        <div class="projeto-img"> <a href=""> <img src="./assets/img/moveit.png" alt="Imagem do site Move It"> </a> </div>  
+                        <div class="projeto-img" > <a href="https://pauloabrahao.github.io/Site-Awax/" target="blank"> <img src="./assets/img/awax.png" alt="Imagem do site Awax" > </a> </div>  
 
-                        <div class="projeto-img" id="retira"> <a href="https://pauloabrahao.github.io/Site-Awax/" target="blank"> <img src="./assets/img/awax.png" alt="Imagem do site Awax" id="retira"> </a> </div>  
+                        <div class="projeto-img" id="retira"> <a href=""> <img src="./assets/img/moveit.png" alt="Imagem do site Move It" id="retira"> </a> </div>  
+
 
                         <div class="projeto-img" id="retira"> <a href=""> <img src="./assets/img/hamburgueria.png" alt="Imagem de site de Hamburgueria" id="retira"> </a> </div>  
 
