--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet/less" type="text/css" href="style/style.less" />
     <script src="//cdn.jsdelivr.net/npm/less@4.1.1" ></script>
 
+
+    <!-- FAVICON -->
+
+    <!-- <link rel="shortcut icon" href="caminhodoarquivo/favicon.ico" /> -->
+
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
 </head>
 
