--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paulo Abrahão</title>
 
+
     <!-- CSS -->
 
     <link rel="stylesheet/less" type="text/css" href="style/style.less" />
@@ -14,9 +15,8 @@
 
     <!-- FAVICON -->
 
-    <!-- <link rel="shortcut icon" href="caminhodoarquivo/favicon.ico" /> -->
+    <link rel="shortcut icon" href="assets/img/rocket.png" /> 
 
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
 </head>
 
 <body>
@@ -55,7 +55,8 @@
             <img src="assets/img/profile.png" alt="Imagem de perfil"> 
             <div class="profile-apresentation">
                 <h1>
-                    <a href="" class="typewrite" data-period="1500" data-type='[ "Designer", "Freelancer", "Desenvolvedor"]'>
+                    <a href="" class="typewrite" data-period="1500" data-type='[ "Designer", "Freelancer", "Desenvolvedor"]'> 
+
                     <span class="wrap"></span>
                     </a>
                 </h1>
@@ -146,12 +147,12 @@
 
                         <div class="projeto-img" > <a href="https://pauloabrahao.github.io/Site-Awax/" target="blank"> <img src="./assets/img/awax.png" alt="Imagem do site Awax" > </a> </div>  
 
-                        <div class="projeto-img" id="retira"> <a href=""> <img src="./assets/img/moveit.png" alt="Imagem do site Move It" id="retira"> </a> </div>  
+                        <div class="projeto-img" id="retira"> <a href="https://pauloabrahao.github.io/moveit-next/"> <img src="./assets/img/moveit.png" alt="Imagem do site Move It" id="retira"> </a> </div>  
 
 
                         <div class="projeto-img" id="retira"> <a href=""> <img src="./assets/img/hamburgueria.png" alt="Imagem de site de Hamburgueria" id="retira"> </a> </div>  
 
-                        <div class="projeto-img" id="retira"> <a href=""> <img src="./assets/img/pre-order.png" alt="Imagem do site de Pre-Order de um produto" id="retira"> </a> </div>  
+                        <div class="projeto-img" id="retira"> <a href="https://pauloabrahao.github.io/Pre-Order/"> <img src="./assets/img/pre-order.png" alt="Imagem do site de Pre-Order de um produto" id="retira"> </a> </div>  
                        
                     </div>
                     
