adicionado target aos links

--- a/index.html
+++ b/index.html
@@ -147,12 +147,11 @@
 
                         <div class="projeto-img" > <a href="https://pauloabrahao.github.io/Site-Awax/" target="blank"> <img src="./assets/img/awax.png" alt="Imagem do site Awax" > </a> </div>  
 
-                        <div class="projeto-img" id="retira"> <a href="https://pauloabrahao.github.io/moveit-next/"> <img src="./assets/img/moveit.png" alt="Imagem do site Move It" id="retira"> </a> </div>  
+                        <div class="projeto-img" id="retira"> <a href="https://pauloabrahao.github.io/moveit-next/" target="blank"> <img src="./assets/img/moveit.png" alt="Imagem do site Move It" id="retira"> </a> </div>  
 
+                        <div class="projeto-img" id="retira"> <a href="" target="blank"> <img src="./assets/img/hamburgueria.png" alt="Imagem de site de Hamburgueria" id="retira"> </a> </div>  
 
-                        <div class="projeto-img" id="retira"> <a href=""> <img src="./assets/img/hamburgueria.png" alt="Imagem de site de Hamburgueria" id="retira"> </a> </div>  
-
-                        <div class="projeto-img" id="retira"> <a href="https://pauloabrahao.github.io/Pre-Order/"> <img src="./assets/img/pre-order.png" alt="Imagem do site de Pre-Order de um produto" id="retira"> </a> </div>  
+                        <div class="projeto-img" id="retira"> <a href="https://pauloabrahao.github.io/Pre-Order/" target="blank"> <img src="./assets/img/pre-order.png" alt="Imagem do site de Pre-Order de um produto" id="retira"> </a> </div>  
                        
                     </div>
                     
