--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     <link rel="shortcut icon" href="assets/img/rocket.png" /> 
 
+
+
 </head>
 
 <body>
@@ -62,11 +64,11 @@
                 </h1>
             </div>
 
-            <a href="#" download>
+            <a href="./assets/img/CV.pdf" target="iframe_download">
                 <div class="download">  
-                    <img src="assets/img/icon-download.svg" alt="Ícone de download">  
-
-                    <a href="#"> Baixe meu currículo </a>
+                    <img src="assets/img/icon-download.svg" alt="Ícone de download">
+                    <a href="./assets/img/CV.pdf" target="iframe_download"> Baixe meu currículo </a>
+       
                 </div>
             </a>
 
